Wrapping and sidebar fixes, current page styling

--- a/wp-content/themes/fancy/sass/_type.scss
+++ b/wp-content/themes/fancy/sass/_type.scss
@@ -47,5 +47,6 @@ time {
 }
 
 a {
+	color: $green;
     font-size: 1em;
 }
